Practices removed xrefs couldn't find target

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5022,7 +5022,7 @@ navigation  recommended  here, it should be documented on the page.</p>
 			agent. The accessible value and state property changes will be
 			generated in response to changes in the DOM attributes as defined
 			by the WCAG 1.0 <a href="http://www.w3.org/WAI/WCAG1AAA-Conformance">AAA</a> specification. User agents supporting the platform
-			accessibility API, will support event notification such as the <a href="#StateChange">state change</a> or <a href="#valuechange">value change</a> events.</p>
+			accessibility API, will support event notification such as the state change or value change events.</p>
 	</section>
     <section id="alookahead">
 		<h3> HTML 5 - A Look Ahead</h3>
