--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1990,7 +1990,7 @@ This is because browser accessibility APIs do not support child elements contain
             <ul>
               <li> <a href="http://www.oaa-accessibility.org/examplep/slider1/" title="Slider" target="_blank" rel="nofollow">Open Ajax Alliance Sliders</a></li>
               <li> <a href="http://mindtrove.info/creating-an-accessible-internationalized-dojo-rating-widget/" title="Creating an Accessible Dojo Rating Widget" target="_blank" rel="nofollow">MINDTROVE Rating Widget</a></li>
-              <li> <a href="http://www.paciellogroup.com/blog/misc/ARIA/slider/" title="Basic ARIA Slider" target="_blank" rel="nofollow">Paciello Group slider</a></li>
+            	<li> <a href="http://files.paciellogroup.com/blogmisc/ARIA/slider/" title="Basic ARIA Slider" target="_blank" rel="nofollow">Paciello Group slider</a></li>
               
             </ul>
             <p>Please note that not all examples work in all browser and version combinations. For example, note the compatibility statement.</p></td>
@@ -2048,7 +2048,7 @@ This is because browser accessibility APIs do not support child elements contain
             <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG taskforce is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
             <ul>
               <li><a href="http://www.oaa-accessibility.org/examplep/slider1/" title="Slider" target="_blank" rel="nofollow">Open Ajax Alliance Sliders</a> (see second example on page)</li>
-              <li><a href="http://www.paciellogroup.com/blog/misc/samples/aria/slider/doubleslider.html" title="" target="_blank" rel="nofollow">Paciello Group double slider</a></li>
+            	<li><a href="http://files.paciellogroup.com/blogmisc/samples/aria/slider/doubleslider.html" title="" target="_blank" rel="nofollow">Paciello Group double slider</a></li>
             </ul>
             </td>
           </tr>
@@ -3007,7 +3007,7 @@ Here the values 1 through 7 represent the days of the week and
         	</li>
         <li>
           	<p><em>Use key event handlers to enable activation of the element</em> - For every mouse event handler, a keyboard event handler is required. For example, if you have an <em>onclick="doSomething()"</em> you may also need <em>onkeydown="return event.keyCode != 13 || doSomething();" </em>in order to allow the <kbd>Enter</kbd> key to activate that element. </p>
-        	<p class="note">There are <a href="https://developer.mozilla.org/en-US/docs/Accessibility/Keyboard-navigable_JavaScript_widgets" title="Keyboard-navigable JavaScript widgets - MDN" target="_blank">user agent-specific considerations</a> for key event handling.</p>
+        	<p class="note">There are <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/Keyboard-navigable_JavaScript_widgets" title="Keyboard-navigable JavaScript widgets - MDN" target="_blank">user agent-specific considerations</a> for key event handling.</p>
         </li>
         <li>
         	<p>Consider using a "<a href="#kbd_general_within">roving</a>" tabindex for complex widgets if you are not using the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property. </p>
