Fixed UIUC links from Jon

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2877,7 +2877,7 @@ function detectHiContrast() {
     </section>
       <section id="kbd_general_ex">
       <h4> Example Keyboard Operation: Radio Group/Radio </h4>
-      <p> See working <a href="http://test.cita.uiuc.edu/aria/radio/" title="CITA Radio Button Examples">Radio button examples</a> from the University of Illinois.</p>
+      	<p> See working <a href="http://oaa-accessibility.org/examplep/radio1/" title="CITA Radio Button Examples">Radio button examples</a> from the University of Illinois.</p>
       <table>
         <caption>
         Key Bindings for Radio Group Behavior - Example
@@ -3057,7 +3057,7 @@ Here the values 1 through 7 represent the days of the week and
         <section id="kbd_tooltips">
         <h3> Supporting Tooltips with the Keyboard</h3>
         <p>A <a class="role-reference" href="#tooltip">tooltip</a> is a  popup messages typically triggered by moving a mouse over a control or widget causing a small popup window to appear with additional information about the control. To provide simple text tooltips, the <a href="http://www.w3.org/TR/1999/REC-html401-19991224/struct/global.html#h-7.4.3">HTML title attribute</a> should more than suffice because the user agent will render it for tooltips. When creating a <a class="role-reference" href="#tooltip">tooltip</a>, it is essential that  the user be able to activate it using the keyboard. When a form control or widget receives keyboard focus, the <a class="role-reference" href="#tooltip">tooltip</a> must display. When the form control or widget loses focus, the tooltip must disappear. Browsers do not currently support this functionality. </p>
-        <p>The following code snippet from the <a href="http://test.cita.uiuc.edu/aria/tooltip/tooltip1.php" title="iCITA"><abbr title="Illinois Center for Information Technology Accessibility">iCITA</abbr></a> site shows the use of a <span class="example highlight">onfocus=&quot;tooltipShow();&quot;</span> function to display the tooltip when focus is placed on an element. </p>
+        	<p>The following code snippet from the <a href="http://oaa-accessibility.org/examplep/tooltip1/" title="iCITA"><abbr title="Illinois Center for Information Technology Accessibility">iCITA</abbr></a> site shows the use of a <span class="example highlight">onfocus=&quot;tooltipShow();&quot;</span> function to display the tooltip when focus is placed on an element. </p>
         <pre class="example higlight" id="line1">&lt;html lang="en-us""&gt;  
 &lt;head&gt;    
    &lt;title&gt;inline: Tooltip Example 1&lt;/title&gt;      
@@ -4876,7 +4876,7 @@ navigation  recommended  here, it should be documented on the page.</p>
 
 &lt;/body&gt;</pre>
 		</div>
-		<p>The example above was taken from the header from the <a href="http://test.cita.uiuc.edu/aria/nav/nav1.php">Career Center Web page at the University of Illinois at
+    	<p>The example above was taken from the header from the <a href="http://courses.cita.illinois.edu/wcag20-aria-html5/structure/slide12.html">Career Center Web page at the University of Illinois at
 			Urbana-Champaign</a>. Students from this university, under  Jon
 			Gunderson's guidance created <a href="http://firefox.cita.uiuc.edu/">Accessibility
 			extensions for Mozilla/Firefox</a>, in part, to allow a page author or
