Practices remove broken xref from primer

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -5017,8 +5017,7 @@ navigation  recommended  here, it should be documented on the page.</p>
     <section id="Events">
 		<h3> Accessibility Events and Event Handling</h3>
 		<p>Interoperability between applications and assistive technologies
-			requires event notification for accessibility. The events defined
-			in <a href="#gapanalysishtml">Table 2.0</a> will be fired via the user
+			requires event notification for accessibility. The events will be fired via the user
 			agent. The accessible value and state property changes will be
 			generated in response to changes in the DOM attributes as defined
 			by the WCAG 1.0 <a href="http://www.w3.org/WAI/WCAG1AAA-Conformance">AAA</a> specification. User agents supporting the platform
