Setting up shared bibliography

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -6,6 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script src="https://www.w3.org/Tools/respec/respec-w3c-common" class="remove"></script>
 <script src="../common/script/resolveReferences.js" class="remove"></script>
+	<script src="../common/biblio.js" class="remove"></script>
     <script class="remove">
       var respecConfig = {
           // embed RDFa data in the output
@@ -132,53 +133,7 @@
           wgPatentURI:  "http://www.w3.org/2004/01/pp-impl/32212/status",
           maxTocLevel: 4,
 
-          localBiblio: {
-	      "WAI-ARIA": {
-	        "title": "Accessible Rich Internet Applications (WAI-ARIA) 1.1",
-	        "href": "http://www.w3.org/TR/wai-aria-1.1/",
-	        "status": "WD",
-	        "publisher": "W3C",
-	        "authors": [
-	          "James Craig",
-	          "Michael Cooper",
-	          "Shane McCarron"
-	        ],
-	        "etAl": true,
-	        "deliveredBy": [
-	          "http://www.w3.org/WAI/PF/"
-	        ]
-	      },
-	      "WAI-ARIA-10": {
-	        "authors": [
-	          "James Craig",
-	          "Michael Cooper"
-	        ],
-	        "etAl": true,
-	        "href": "http://www.w3.org/TR/wai-aria/",
-	        "title": "Accessible Rich Internet Applications (WAI-ARIA) 1.0",
-	        "status": "REC",
-	        "publisher": "W3C",
-	        "deliveredBy": [
-	          "http://www.w3.org/WAI/PF/"
-	        ]
-	      },
-	      "CORE-AAM": {
-	        "title": "Core Accessibility API Mappings 1.1",
-	        "href": "http://www.w3.org/TR/core-aam-1.1/",
-	        "status": "WD",
-	        "publisher": "W3C",
-	        "authors": [
-	          "Joseph Scheuhammer",
-	          "Michael Cooper",
-	          "Andi Snow-Weaver",
-	          "Aaron Leventhal"
-	        ],
-	        "etAl": true,
-	        "deliveredBy": [
-	          "http://www.w3.org/WAI/PF/"
-	        ]
-	      },
-        },
+          localBiblio: biblio,
 
 	preProcess: [ linkCrossReferences ]      
 	};
