--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1254,10 +1254,11 @@ This is because browser accessibility APIs do not support child elements contain
             <li>The listbox element is focusable. It is either included in the tab sequence by having tabindex of 0 or greater (see <a href="#kbd_general_between">Keyboard Navigation between Widgets</a>), 
           or it is contained within a composite widget, such as a toolbar or grid, and is made focusable by having tabindex of -1 (see <a href="#kbd_general_within">Keyboard Navigation within Widgets</a>).
           </li>
+          <li>When a listbox receives focus, visual focus is set on an option inside the listbox. If browser focus is set to the container with role listbox then aria-activedescendant must be used to refer to the option with visual focus.</li>
                 <li>When a single-select listbox receives focus:
                 <ul>
                 <li>If none of the options are selected, the first option receives focus. Optionally, it may be automatically selected.</li>
-                <li>If an option is selected, before the listbox receives focus, focus is set on the selected item when the listbox receives focus.</li>
+                <li>If an option is selected before the listbox receives focus, focus is set on the selected item when the listbox receives focus.</li>
                 </ul>
                 </li>
                 <li>When a multi-select listbox receives focus:
@@ -1266,9 +1267,8 @@ This is because browser accessibility APIs do not support child elements contain
                 <li>If one or more options are selected, focus is set on the first option in the list that is selected.</li>
                 </ul>
                 </li>
-                <li>Note that if browser focus is set to the container with role listbox then aria-activedescendant must be used to refer to the option with visual focus.</li>
                 <li><kbd>Up</kbd> and <kbd>Down</kbd> move focus up and down the list. If it is a single-select listbox, the selection state moves with the focus.</li>
-                <li>Type-ahead is recommended for all lists and required for long lists (typically more than 5 items):
+                <li>Type-ahead is strongly recommended for all lists and essential for long lists (typically more than 5 items):
                 <ul>
                     <li>Type a character: focus moves to the next item with a name
                       that starts with the typed character.</li>
@@ -1278,23 +1278,26 @@ This is because browser accessibility APIs do not support child elements contain
                   </ul>
                 </li>
                 <li><kbd>Shift+F10</kbd>: opens the context menu for the currently focused option if a context menu is available</li>
-                <li><strong>Multiple Selection</strong>: In multi-select listboxes, the author may choose between 2 types of selection models. One model requires a modifier key, e.g., shift or control, to change the selection state, and the other does not.
+                <li><strong>Multiple Selection</strong>: In multi-select listboxes, the author may implement either of two interaction models: one that does not require modifier keys, e.g., <kbd>Shift</kbd> or <kbd>Control</kbd>, (recommended) and one that does. 
                   <ul>
-                  <li>Selection model 1 (modifiers not required):
+                  <li>Selection model 1 -- modifiers not required:
                   <ul>
-                  <li><kbd>Space</kbd>: toggles selection state of option with focus.</li>
-                  <li><kbd>Shift+Up Arrow</kbd> and <kbd>Shift+Down Arrow</kbd> move and extend the selection. </li>
-                  <li><kbd>Control</kbd>+<kbd>Shift</kbd>+<kbd>Home</kbd>: select the option with focus and all options up to the beginning of the list.</li>
-                  <li><kbd>Control</kbd>+<kbd>Shift</kbd>+<kbd>End</kbd>: select the option with focus and all options down to the end of the list.</li>
+                  <li><kbd>Space</kbd>: changes the selection state of the focused option .</li>
+                  <li><kbd>Control</kbd>+<kbd>A</kbd> (optional): selects all options in the list.</li>
+                  <li><kbd>Shift+Down Arrow</kbd> and <kbd>Shift+Up Arrow</kbd> (optional): move the focus and select the next or previous option.</li>
+                  <li><kbd>Control</kbd>+<kbd>Shift</kbd>+<kbd>Home</kbd> (optional): selects the option with focus and all options up to the beginning of the list.</li>
+                  <li><kbd>Control</kbd>+<kbd>Shift</kbd>+<kbd>End</kbd> (optional): selects the option with focus and all options down to the end of the list.</li>
                   </ul>
                   </li>
                   <li>Selection model 2 (modifier keys required):
                   <ul>
-                  <li><kbd>Shift+Up Arrow</kbd> and <kbd>Shift+Down Arrow</kbd> move and extend the selection. </li>
-                        <li><kbd>Shift+Space</kbd> selects contiguous items from the last   selected item to the current item. </li>
-                        <li><kbd>Control+Arrow</kbd> moves without selecting. </li>
-                        <li><kbd>Control+Space</kbd> toggles selection of non-contiguous items, adding or removing the current item from the set of selected items. </li>
-                        <li><kbd>Control+A</kbd> - It is recommended a checkbox, link or other   method be used to select all. The <kbd>Control+A</kbd> key could be used to provide the   shortcut key.</li>
+                  <li><kbd>Shift+Down Arrow</kbd> and <kbd>Shift+Up Arrow</kbd>: move the focus and select the next or previous option.</li>
+                        <li><kbd>Shift+Space</kbd> (optional): selects contiguous items from the last   selected item to the current item. </li>
+                        <li><kbd>Control+ Down Arrow</kbd> or <kbd>Control + Up Arrow</kbd>: move the focus without changing the selection state. </li>
+                        <li><kbd>Control+Space</kbd> Changes the selection state of the focused option. </li>
+                        <li><kbd>Control</kbd>+<kbd>Shift</kbd>+<kbd>Home</kbd> (optional): selects the option with focus and all options up to the beginning of the list.</li>
+                  <li><kbd>Control</kbd>+<kbd>Shift</kbd>+<kbd>End</kbd> (optional): selects the option with focus and all options down to the end of the list.</li>
+                        <li><kbd>Control</kbd>+<kbd>A</kbd> (optional): selects all options in the list.</li>
                       </ul>
                     </li>
                   </ul>
