Editorial Changes for tree view example

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2333,21 +2333,20 @@ Characteristics:
   		<tbody>
 				<tr>
 					<th class="widget-description-head" scope="row">Description: </th>
-					<td class="widget-description"><p>A
-						tree view is a component to navigate hierarchical lists. It is made up
+					<td class="widget-description">
+						<p>A tree view is a component to navigate hierarchical lists. It is made up
 						of one or more top level nodes. A node may have children or it may be
 						an end node. Nodes with children can be expanded or collapsed - when
 						expanded its child nodes are visible. When collapsed the children are
 						not visible. There is generally some sort of visual indication whether
 						a node has children and can be expanded. Any number of nodes can be
 						expanded at a time and child nodes may contain children. </p>
-							<p>A
-								tree node is commonly used to navigate the directories and files on a
-								file system. The directory nodes can be expanded and collapsed to
-								reveal its contained subdirectories and files. Terms for understanding
-								tree views include:</p>
+						<p>An example of a Tree View is a File Navigator where a tree view is used to navigate the directories and files on a
+						file system. The directory nodes can be expanded and collapsed to
+						reveal its contained subdirectories and files. Terms for understanding
+						tree views include:</p>
 						<dl>
-								<dt>node</dt>
+							<dt>node</dt>
 							<dd>An item in a tree. </dd>
 							<dt>parent node</dt>
 							<dd>Node with children. It can be opened / expanded or closed / collapsed </dd>
