Remove link for

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -18,7 +18,7 @@
 
     <h2>Examples</h2>
     
-    <p>The following examples are composed by a native <code>&lt;button&gt;</code> element, a <code>&lt;div&gt;</code> functioning as a native button, and a <code>&lt;span&gt;</code> element that functions as a <a href="">toggle button</a>.</p>
+    <p>The following examples are composed by a native <code>&lt;button&gt;</code> element, a <code>&lt;div&gt;</code> functioning as a native button, and a <code>&lt;span&gt;</code> element that functions as a toggle button.</p>
 
     <ul id="example">
         <li>
