Link examples to common css styles

--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -4,7 +4,7 @@
 <head>
     <title>Link design pattern</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/basic.css" />
+    <link rel="stylesheet" type="text/css" href="../css/core.css" />
     <link rel="stylesheet" type="text/css" href="css/link.css" />
     <script src="js/link.js"></script>
 </head>
