--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -4,7 +4,7 @@
 <head>
     <title>Button design pattern</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/basic.css" />
+    <link rel="stylesheet" type="text/css" href="../css/core.css" />
     <link rel="stylesheet" type="text/css" href="css/button.css" />
     <script src="js/button.js"></script>
 </head>
