Change emphasis on repuposing non-native elements

--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -14,7 +14,7 @@
 
     <p>The example on this page is based on the Button design pattern in the <a href="https://rawgit.com/w3c/aria/master/practices/aria-practices.html">ARIA 1.1 Authoring Practices Guide</a>.</p>
 
-    <p><strong>Note:</strong> When using HTML use the <code>&lt;button&gt;</code> element. You <strong>should not</strong> re-purpose other elements to create buttons.</p>
+    <p><strong>Note:</strong> When using HTML use the <code>&lt;button&gt;</code> element. Authors <strong>should not</strong> re-purpose other elements to create buttons.</p>
 
     <h2>Examples</h2>
     
