--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -14,7 +14,7 @@
 
     <p>The example on this page is based on the Link design pattern in the <a href="https://rawgit.com/w3c/aria/master/practices/aria-practices.html">ARIA 1.1 Authoring Practices Guide</a>.</p>
 
-    <p><strong>Note:</strong> When using HTML use the <code>&lt;a&gt;</code> element. It is recommended that authors re-purpose other elements to create links.</p>
+    <p><strong>Note:</strong> When using HTML use the <code>&lt;a&gt;</code> element. It is recommended that authors not re-purpose other elements to create links.</p>
 
     <h2>Example</h2>
 
