--- a/aria-practices.html
+++ b/aria-practices.html
@@ -549,6 +549,7 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
             <td class="widget-example">
             <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG taskforce is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
               <ul>
+                <li><a href="examples/button/button.html">Button role examples</a></li>
                 <li><a href="http://www.oaa-accessibility.org/examplep/button1/" title="Button role example using text-only buttons" target="_blank">Open Ajax Alliance button with text label</a></li>
                 <li><a href="http://www.oaa-accessibility.org/examplep/button2/" title="Button role example using image buttons" target="_blank">Open Ajax Alliance button using image label</a></li>
               </ul>
@@ -1220,7 +1221,9 @@ Frequent interruptions inhibit usability for people with visual and cognitive di
           <tr>
             <td class="widget-keyboard-head">Example: </td>
             <td class="widget-keyboard">
-              <p class="ednote">Add link to example</p>
+              <ul>
+                <li><a href="examples/link/link.html">Link role examples</a></li>
+              </ul>
             </td>
           </tr>
         </tbody>
@@ -1944,6 +1947,8 @@ This is because browser accessibility APIs do not support child elements contain
             <td class="widget-example">
             <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG taskforce is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
             <ul>
+              <li><a href="examples/slider/slider-1.html">Horizontal Silder Examples (e.g. color picker)</a></li>
+              <li><a href="examples/slider/slider-2.html">Vertical and Text Slider Examples (e.g. Thermostat Controls)</a></li>
               <li> <a href="http://www.oaa-accessibility.org/examplep/slider1/" title="Slider" target="_blank" rel="nofollow">Open Ajax Alliance Sliders</a></li>
               <li> <a href="http://mindtrove.info/creating-an-accessible-internationalized-dojo-rating-widget/" title="Creating an Accessible Dojo Rating Widget" target="_blank" rel="nofollow">MINDTROVE Rating Widget</a></li>
             	<li> <a href="http://files.paciellogroup.com/blogmisc/ARIA/slider/" title="Basic ARIA Slider" target="_blank" rel="nofollow">Paciello Group slider</a></li>
