--- a/examples/alert/index.html
+++ b/examples/alert/index.html
@@ -11,7 +11,7 @@
   <body>
     <script type="text/template" id="alert-template">
       <div role="alert">
-        <p>Hej, hello, ciao, こんにちは</p>
+        <p>Hej, hello, ciao, こんにちは, 안녕</p>
       </div>
     </script>
 
