--- a/aria-practices.html
+++ b/aria-practices.html
@@ -190,7 +190,7 @@
     <hr />
     <section class="widget" id="accordion">
     <h3 class="widget-name">Accordion</h3>
-    <p class="note">This section has not been updated since it was integrated from APG version 1.0 -- an APG taskforce review is pending.</p>
+    	<p class="note">This section has not been updated since it was integrated from the WAI-ARIA Authoring Practices Guide (<abbr title="Authoring Practices Guide">APG</abbr>) version 1.0 -- an APG taskforce review is pending.</p>
       <table class="widget-features">
         <caption>
         Characteristics:
