Updated CITA example link

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4836,7 +4836,7 @@ navigation  recommended  here, it should be documented on the page.</p>
 
 &lt;/body&gt;</pre>
 		</div>
-    	<p>The example above was taken from the header from the <a href="http://courses.cita.illinois.edu/wcag20-aria-html5/structure/slide12.html">Career Center Web page at the University of Illinois at
+    	<p>The example above was taken from the header from the <a href="http://courses.cita.illinois.edu/structure/slide12.html">Career Center Web page at the University of Illinois at
 			Urbana-Champaign</a>. Students from this university, under  Jon
 			Gunderson's guidance created <a href="http://firefox.cita.uiuc.edu/">Accessibility
 			extensions for Mozilla/Firefox</a>, in part, to allow a page author or
