modified:   practices/aria-practices.html: Partial draft of revisions to menu and menubar design pattern description

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1371,9 +1371,8 @@ This is because browser accessibility APIs do not support child elements contain
         <tr>
           <th class="widget-description-head" scope="row">Description: </th>
           <td class="widget-description">
-             <p>A menu is a type of widget that offers a list of choices to the user. A menu is often a list of common actions or functions that the user can invoke. The menu role is appropriate when a list of menu items is presented in a manner similar to a menu on a desktop application. </p>
-			 <p>A menubar is a presentation of a menu that usually remains visible and is usually presented horizontally.
-             The menubar role is used to create a menu bar similar to those found in Windows, Mac, and Gnome desktop applications. A menu bar is used to create a consistent set of frequently used commands.</p>
+             <p>A menu is a widget that offers a list of choices to the user, such as a set of actions or functions. The menu role is appropriate when the choices are presented in a manner similar to a menu in a desktop application. </p>
+			 <p>A menubar is a menu that is typically horizontal and visually persistent.              The menubar role may be used to create a menu bar similar to those found near the top of the window in many desktop applications, offering the user quick access to a consistent set of commands. </p>
 			 <p>A menu or menubar should manage the focus of its descendants. </p>
              <p>Sometimes a menu item will launch a dialog box.  This is indicated using &quot;&#8230;&quot; (ellipsis) at the end of the menu item label.  An example is &quot;Save as &#8230;&quot;.</p>
           </td>
