--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1371,10 +1371,10 @@ This is because browser accessibility APIs do not support child elements contain
         <tr>
           <th class="widget-description-head" scope="row">Description: </th>
           <td class="widget-description">
-             <p>A menu is a widget that offers a list of choices to the user, such as a set of actions or functions. The menu role is appropriate when the choices are presented in a manner similar to a menu in a desktop application. </p>
-			 <p>A menubar is a menu that is typically horizontal and visually persistent.              The menubar role may be used to create a menu bar similar to those found near the top of the window in many desktop applications, offering the user quick access to a consistent set of commands. </p>
+             <p>A <a href="#menu" class="role-reference">menu</a> is a widget that offers a list of choices to the user, such as a set of actions or functions. A menu is usually opened, or made visible, by activating a <a href="#menubutton">menu button</a>, choosing an item in a menu that opens a sub menu, or by invoking a command, such as <kbd>Shift</kbd>+<kbd>F10</kbd> in Windows, that opens a context specific menu. When a user activates a choice in a menu, the menu usually closes unless the choice opened a submenu.</p>
+			 <p>A menu that is visually persistent is a <rref>menubar</rref>. A menubar is typically horizontal and is often used to create a menu bar similar to those found near the top of the window in many desktop applications, offering the user quick access to a consistent set of commands. </p>
 			 <p>A menu or menubar should manage the focus of its descendants. </p>
-             <p>Sometimes a menu item will launch a dialog box.  This is indicated using &quot;&#8230;&quot; (ellipsis) at the end of the menu item label.  An example is &quot;Save as &#8230;&quot;.</p>
+             <p>A common convention for indicating that a menu item launches a dialog box is to append &quot;&#8230;&quot; (ellipsis) to the menu item label, e.g., &quot;Save as &#8230;&quot;.</p>
           </td>
         </tr>
         <tr>
