--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1372,62 +1372,57 @@ This is because browser accessibility APIs do not support child elements contain
           <th class="widget-description-head" scope="row">Description: </th>
           <td class="widget-description">
              <p>A <a href="#menu" class="role-reference">menu</a> is a widget that offers a list of choices to the user, such as a set of actions or functions. A menu is usually opened, or made visible, by activating a <a href="#menubutton">menu button</a>, choosing an item in a menu that opens a sub menu, or by invoking a command, such as <kbd>Shift</kbd>+<kbd>F10</kbd> in Windows, that opens a context specific menu. When a user activates a choice in a menu, the menu usually closes unless the choice opened a submenu.</p>
-			 <p>A menu that is visually persistent is a <rref>menubar</rref>. A menubar is typically horizontal and is often used to create a menu bar similar to those found near the top of the window in many desktop applications, offering the user quick access to a consistent set of commands. </p>
-			 <p>A menu or menubar should manage the focus of its descendants. </p>
+			 <p>A menu that is visually persistent is a <a href="#menubar" class="role-reference">menubar</a>. A menubar is typically horizontal and is often used to create a menu bar similar to those found near the top of the window in many desktop applications, offering the user quick access to a consistent set of commands. </p>
              <p>A common convention for indicating that a menu item launches a dialog box is to append &quot;&#8230;&quot; (ellipsis) to the menu item label, e.g., &quot;Save as &#8230;&quot;.</p>
           </td>
         </tr>
         <tr>
           <th class="widget-keyboard-head" scope="row">Keyboard Interaction: </th>
           <td class="widget-keyboard">
-		    <ul><li>For a menu bar which is presented horizontally
+		    <ul>
+			<li>When a menu opens and its items are arranged vertically:
               <ul>
-                <li><kbd>Enter</kbd>, <kbd>Space</kbd>, and the <kbd>up down</kbd> arrow keys opens the   menu and places focus on the first menu item in the opened menu or child menu   bar. </li>
-                <li>Left or right arrow keys move focus to the adjacent menu   bar item. </li>
-              </ul></li>
-			<li>For menus presented vertically
+              <li>Keyboard focus is placed on the first item.</li>
+                <li><kbd>Enter</kbd> and optionally <kbd>Space</kbd>: activate the menu item with focus (perform the  command or open the submenu associated with the menu item). </li>
+                <li><kbd>Down Arrow</kbd> and <kbd>Up Arrow</kbd>: move focus to the next and previous items, respectively, wrapping from last to first and vice versa. </li>
+                <li><kbd>Right Arrow</kbd>: Perform the first of the following actions that applies:
+                <ul>
+                <li>If the menu item with focus opens a submenu, open the submenu and place focus on the first item in the submenu. </li>
+                <li>If the menu item with focus is contained in a submenu opened from an item in a menubar, close the current menu and open the submenu associated with the next item in the menubar that has an associated submenu. </li>
+                <li>Either move focus to the next item in the current menu or do nothing. </li>
+                </ul>
+                </li>
+                <li><kbd>Left Arrow</kbd>: Perform the first of the following actions that applies:
+                <ul>
+                <li>If the menu item with focus is contained in a submenu opened from an item in a menubar, close the current menu and open the submenu associated with the previous item in the menubar that has an associated submenu. </li>
+                <li>If the menu item with focus is contained in a submenu, close the current menu and place focus on the menu item from which the submenu was opened. </li>
+                <li>Either move focus to the previous item in the current menu or do nothing. </li>
+                </ul>
+                </li>
+                <li>Any key that corresponds to a printable character: Move focus to   the next menu item in the current menu whose label begins with that printable character. </li>
+                <li><kbd>Escape</kbd>: Close the menu and return focus to   the element, e.g., menu button or parent menu item, from which the menu was opened. </li>
+                <li><kbd>Tab</kbd>: Close the menu an all open parent menus and move focus to the next element in the tab sequence.</li>
+                <li><kbd>Shift</kbd>+<kbd>Tab</kbd>: Close the menu and all open parent menus and move focus to the previous element in the tab sequence.</li>
+              </ul>
+            </li>
+			<li>A menubar is the same as above except that:
 			<ul>
-            <li>When a menu is open and focus is on a menu item in that open menu, then
-              <ul>
-                <li><kbd>Enter</kbd> or <kbd>Space</kbd> invokes that menu action (which may be to   open a submenu). </li>
-                <li><kbd>Up Arrow</kbd> or <kbd>Down Arrow</kbd> keys cycle focus through the items in   that menu. </li>
-                <li><kbd>Escape</kbd> closes the open menu or submenu and returns focus to   the parent menu item. </li>
-                <li>If the menu item with focus has a submenu, pressing <kbd>Enter</kbd>, <kbd>Space</kbd>,   or the right arrow key opens the submenu and puts focus on the first   submenu item. </li>
-              </ul>
-            </li>
-            <li>When a submenu is open and focus is on a menu item in that submenu:
-              <ul>
-                <li><kbd>Up Arrow</kbd> or <kbd>Down Arrow</kbd> keys cycle through the submenu items   (behaves the same as open menu). </li>
-                <li><kbd>Escape</kbd> or the <kbd>Left Arrow</kbd>  key closes the submenu and returns   focus to the parent menu item. </li>
-              </ul>
-            </li>
-			</ul></li>
-			<li>For menus presented horizontally (not very common)
-			<ul>
-            <li>When a menu is open and focus is on a menu item in that open menu, then
-              <ul>
-                <li><kbd>Enter</kbd> or <kbd>Space</kbd> invokes that menu action (which may be to   open a submenu). </li>
-                <li><kbd>Left Arrow</kbd> or <kbd>Right Arrow</kbd> keys cycle focus through the items in   that menu. </li>
-                <li><kbd>Escape</kbd> closes the open menu or submenu and returns focus to   the parent menu item. </li>
-                <li>If the menu item with focus has a submenu, pressing <kbd>Enter</kbd>, <kbd>Space</kbd>,   or the down arrow key opens the submenu and puts focus on the first   submenu item. </li>
-              </ul>
-            </li>
-            <li>When a submenu is open and focus is on a menu item in that submenu:
-              <ul>
-                <li><kbd>Left Arrow</kbd> or <kbd>Right Arrow</kbd> keys cycle through the submenu items   (behaves the same as open menu). </li>
-                <li><kbd>Escape</kbd> or the <kbd>Up Arrow</kbd>  key closes the submenu and returns   focus to the parent menu item. </li>
-              </ul>
-            </li>
-			</ul>			</li>
-            <li>Typing a letter (printable character) key moves focus to   the next instance of a visible node whose title begins with that printable   letter. </li>
-            <li>First item in menu bar should be in the tab order (tabindex=0). </li>
-            <li>Disabled menu items receive focus but have no action when <kbd>Enter</kbd> or <kbd>Left Arrow</kbd>/<kbd>Right Arrow</kbd> is pressed. It is important that the state of the menu   item be clearly communicated to the user. </li>
-            <li>Tabbing out of the menu component closes any open menus. </li>
-            <li>With focus on a menu item and a sub menu opened via mouse behavior, pressing   down arrow moves focus to the first item in the sub menu. </li>
-            <li>With focus on a menu item and a sub menu opened via mouse behavior, pressing   up arrow moves focus to the last item in the sub menu. </li>
-            <li>With focus on a submenu item, the user must use arrows or the <kbd>Escape</kbd>   key to progressively close submenus and move up to the parent menu   item(s). </li>
-            <li>At the top level, <kbd>Escape</kbd> key closes any sub menus and keeps   focus at the top level menu. </li>
-          </ul></td>
+			<li>The menu is persistently open and the first item is in the tab sequence. </li>
+			<li><kbd>Escape</kbd>: does not close the menubar and may return focus to   the context from which the menubar was invoked. For example, a rich text editor may have a menubar that receives focus when a shortcut key, e.g., <kbd>alt</kbd>+<kbd>F10</kbd>, is pressed while editing. In this case, <kbd>Escape</kbd> may return focus to the editor. </li>
+                <li><kbd>Tab</kbd>: When focus is on an item in the menubar, moves focus to the element in the tab sequence after the menubar.</li>
+                <li><kbd>Shift</kbd>+<kbd>Tab</kbd>: When focus is on an item in the menubar, moves focus to the element in the tab sequence before the menubar.</li>
+						</ul>
+          </ul>
+          <ol class="note">
+          <li>If the items in a menu or menubar are arranged horizontally:
+          <ol>
+          <li> <kbd>Right Arrow</kbd> performs as <kbd>Down Arrow</kbd> is described above and vice versa. </li>
+          <li> <kbd>Left Arrow</kbd> performs as <kbd>Up Arrow</kbd> is described above and vice versa. </li>
+          </ol>
+          </li>
+          <li>Disabled menu items should be focusable but can not be activated. </li>
+          </ol>
+          </td>
         </tr>
         <tr>
           <th class="widget-aria-head" scope="row">WAI-ARIA Roles, States, and Properties: </th>
