On branch apg_menuPattern modified:   practices/aria-practices.html: Added link  <a href="#kbd_general_within"></a> to  first bullet of keyboard section of menu design pattern.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1381,7 +1381,7 @@ This is because browser accessibility APIs do not support child elements contain
           <td class="widget-keyboard">
 			<p>When a menu opens and its items are arranged vertically:</p>
               <ul>
-              <li>Keyboard focus is placed on the first item.</li>
+              <li>Keyboard focus is placed on the first item. All items in a menu are focusable as described in <a href="#kbd_general_within"></a></li>
                 <li><kbd>Enter</kbd> and optionally <kbd>Space</kbd>: activate the menu item with focus (perform the  command or open the submenu associated with the menu item). </li>
                 <li><kbd>Down Arrow</kbd> and <kbd>Up Arrow</kbd>: move focus to the next and previous items, respectively, wrapping from last to first and vice versa. </li>
                 <li><kbd>Right Arrow</kbd>: Perform the first of the following actions that applies:
